fix desktop nav and font clipping

--- a/packages/header/src/styles/default.module.css
+++ b/packages/header/src/styles/default.module.css
@@ -11,6 +11,10 @@
   overflow-x: hidden;
   width: 100%;
 
+  @media (--tablet-l) {
+    overflow-x: visible;
+  }
+
   @media (--desktop) {
     background: var(--color-primary-700);
   }
