--- a/packages/header/src/styles/navigationDropdown.module.css
+++ b/packages/header/src/styles/navigationDropdown.module.css
@@ -14,14 +14,6 @@
   color: #fff;
   transition: color 0.3s ease, background 0.3s ease;
 
-  & > span {
-    text-align: left;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    width: 100%;
-    white-space: nowrap;
-  }
-
   &.isActive,
   &.isCurrentPage,
   &:hover,
